--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
 body
+{/* bring contact buttons down by 75px, fix email button with email attached and also where you click, and upload all changes to github. */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body
 {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -11,6 +19,36 @@ body, html
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#container {
+    min-height: 100%;
+}
+
+#main {
+    overflow: auto;
+    padding-bottom: 100px;
+    height: auto;
+}
+
+#footer {
+    position: relative;
+    height: 100px;
+    margin-top: -100px;
+    clear: both;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: black;
+}
+
+.footertext
+{
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: #454545;
+    font-size: 85%;
+}
+
 
 .hero-image
 {
@@ -80,52 +118,20 @@ p
     margin-top: 50px;
     margin-right: 300px;
     margin-left: 300px;
-}
 
-.button
-{
-   margin-top: 150px;
 }
 
 .img1
 {
-  margin-top: 200px;
-  width: 15%;
-  height: auto;
-  padding: 15px;
+    max-width: 33%;
+    text-align: center;
 }
 
 .img2
 {
-  margin-top: 200px;
-  width: 15%;
-  height: auto;
-  padding: 15px;
-}
-
-
-input[type=text]
-{
-    background-color: linen;
-    margin-top: 75px;
-}
-
-.footer
-{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-}
-
-.ionbtn
-{
-    font-size: 64px;
-}
-
-.emailbtn
-{
-    font-size: 64px;
+    max-width: 33%;
+    text-align: center;
+    margin-left: 50px;
 }
 
 .avatar
@@ -135,3 +141,12 @@ input[type=text]
     height: 175px;
     vertical-align: middle;
 }
+
+.footer
+{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 180px;
+}
+
