--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-body
-{/* bring contact buttons down by 75px, fix email button with email attached and also where you click, and upload all changes to github. */
+/* bring contact buttons down by 75px, fix email button with email attached and also where you click, and upload all changes to github. */
 
 * {
     margin: 0;
